# everynoise-scraper

./: .env  .env.example  .gitignore  Pipfile  README.md  TODO.md  app.py  database.py  everynoise_scraper.py  game.py  game_terminal.py  genres.csv  pyproject.toml  requirements.txt  vercel.json
database/: models.py  mysql_db.py  supabase_db.py  supabase_table_creation.sql
static/css/: _base.scss  _variables.scss  about.css  answer.css  guess.css  guess.scss  index.scss  layout.scss  leaderboard.css  leaderboards.scss  main.css  main.scss  party.css  party_answer.css  party_wait.css
static/js/: checkbox_handler.js  guess_timer.js  lobby.js  party_answer.js  party_wait.js  player.js  skip_handler.js
templates/: answer.html  game.html  guess.html  index.html  layout.html  leaderboards.html  match_details.html  party.html
templates/main/: about.html  answer.html  guess.html  index.html
templates/party/: lobby.html  party.html  party_answer.html  party_guess.html  party_wait.html
util/: assets.py
utils/: pusher.py
